force-app/main/default/objects/Pattern_Based_Rule__c/Pattern_Based_Rule__c.object-meta.xml
<CustomObject>
    <label>Pattern Based Rule</label>
    <nameField>
        <label>Pattern Based Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pattern Based Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>