force-app/main/default/objects/Pattern_Based_Rule__c/fields/Action_if_No_Match_Go_To_Service__c.field-meta.xml
<CustomField>
    <fullName>Action_if_No_Match_Go_To_Service__c</fullName>
    <label>Action if No Match Go To Service</label>
    <length>18</length>
    <type>Text</type>
</CustomField>