force-app/main/default/objects/Pattern_Based_Rule__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>