force-app/main/default/objects/Pattern_Based_Rule__c/fields/Append_Values__c.field-meta.xml
<CustomField>
    <fullName>Append_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Append Values</label>
    <type>Checkbox</type>
</CustomField>