force-app/main/default/objects/Pattern_Based_Rule__c/fields/Apply_Empty_Result__c.field-meta.xml
<CustomField>
    <fullName>Apply_Empty_Result__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Empty Result</label>
    <type>Checkbox</type>
</CustomField>