force-app/main/default/objects/Pattern_Based_Rule__c/fields/Assign_To_Owner_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Owner_Queue__c</fullName>
    <label>Assign To Owner Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>