force-app/main/default/objects/Pattern_Based_Rule__c/fields/Assign_To_Owner_Type__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Owner_Type__c</fullName>
    <label>Assign To Owner Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>