force-app/main/default/objects/Pattern_Based_Rule__c/fields/Assign_To_Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign To Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pattern_Based_Rule</relationshipName>
    <type>Lookup</type>
</CustomField>