force-app/main/default/objects/Pattern_Based_Rule__c/fields/Capture_Group__c.field-meta.xml
<CustomField>
    <fullName>Capture_Group__c</fullName>
    <label>Capture Group</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>