force-app/main/default/objects/Pattern_Based_Rule__c/fields/Date_Literal__c.field-meta.xml
<CustomField>
    <fullName>Date_Literal__c</fullName>
    <label>Date Literal</label>
    <length>100</length>
    <type>Text</type>
</CustomField>