force-app/main/default/objects/Pattern_Based_Rule__c/fields/Destination_Value_Field__c.field-meta.xml
<CustomField>
    <fullName>Destination_Value_Field__c</fullName>
    <label>Destination Value Field</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>