force-app/main/default/objects/Pattern_Based_Rule__c/fields/Force_to_Unmatched_Queue__c.field-meta.xml
<CustomField>
    <fullName>Force_to_Unmatched_Queue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force to Unmatched Queue</label>
    <type>Checkbox</type>
</CustomField>