force-app/main/default/objects/Pattern_Based_Rule__c/fields/Lookup_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Object_Field__c</fullName>
    <label>Lookup Object Field</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>