force-app/main/default/objects/Pattern_Based_Rule__c/fields/Lookup_Order__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Order__c</fullName>
    <label>Lookup Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Earliest Created</fullName>
            </value>
            <value>
                <fullName>Latest Created</fullName>
            </value>
            <value>
                <fullName>Latest Modified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>