force-app/main/default/objects/Pattern_Based_Rule__c/fields/Overwrite_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overwrite Allowed</label>
    <type>Checkbox</type>
</CustomField>