force-app/main/default/objects/Pattern_Based_Rule__c/fields/Overwrite_Non_Blank_Values__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_Non_Blank_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overwrite Non Blank Values</label>
    <type>Checkbox</type>
</CustomField>