force-app/main/default/objects/Pattern_Based_Rule__c/fields/Parent_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Id__c</fullName>
    <label>Parent Id</label>
    <referenceTo>Email_Services_Function__c</referenceTo>
    <relationshipLabel>Pattern Based Rules</relationshipLabel>
    <relationshipName>Pattern_Based_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>