force-app/main/default/objects/Pattern_Based_Rule__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field Assignment</fullName>
            </value>
            <value>
                <fullName>Lookup Assignment</fullName>
            </value>
            <value>
                <fullName>Owner Assignment</fullName>
            </value>
            <value>
                <fullName>Fixed Value Lookup Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>