force-app/main/default/objects/Pattern_Based_Rule__c/fields/Separator__c.field-meta.xml
<CustomField>
    <fullName>Separator__c</fullName>
    <label>Separator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>