force-app/main/default/objects/Pattern_Based_Rule__c/fields/Stop_On_Match__c.field-meta.xml
<CustomField>
    <fullName>Stop_On_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop On Match</label>
    <type>Checkbox</type>
</CustomField>