force-app/main/default/objects/Pattern_Based_Rule__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minutes</fullName>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>