force-app/main/default/objects/Pattern_Based_Rule__c/fields/Time_Offset__c.field-meta.xml
<CustomField>
    <fullName>Time_Offset__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Time Offset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>