force-app/main/default/objects/Pattern_Based_Rule__c/fields/Trigger_On__c.field-meta.xml
<CustomField>
    <fullName>Trigger_On__c</fullName>
    <label>Trigger On</label>
    <length>50</length>
    <type>Text</type>
</CustomField>