force-app/main/default/objects/Pattern_Based_Rule__c/fields/Trigger_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Pattern__c</fullName>
    <label>Trigger Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>