force-app/main/default/objects/Pattern_Based_Rule__c/fields/Trigger_Search_In__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Search_In__c</fullName>
    <label>Trigger Search In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>Headers</fullName>
            </value>
            <value>
                <fullName>To</fullName>
            </value>
            <value>
                <fullName>From</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>Attachment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>