force-app/main/default/objects/Pattern_Based_Rule__c/fields/Trigger_When__c.field-meta.xml
<CustomField>
    <fullName>Trigger_When__c</fullName>
    <label>Trigger When</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pattern Matched</fullName>
            </value>
            <value>
                <fullName>Pattern Not Matched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>