force-app/main/default/objects/Pattern_Based_Rule__c/fields/Unmatched_Queue__c.field-meta.xml
<CustomField>
    <fullName>Unmatched_Queue__c</fullName>
    <label>Unmatched Queue</label>
    <length>18</length>
    <type>Text</type>
</CustomField>